force-app/main/default/objects/CongaURL_Settings__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <label>Adjustment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>