force-app/main/default/objects/CongaURL_Settings__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <length>20</length>
    <type>Text</type>
</CustomField>