force-app/main/default/objects/CongaURL_Settings__c/fields/Lease_eSign__c.field-meta.xml
<CustomField>
    <fullName>Lease_eSign__c</fullName>
    <label>Lease eSign</label>
    <length>20</length>
    <type>Text</type>
</CustomField>